scipy.ndimage.interpolation.map_coordinates

*****

Corrected includes in C source files.

*****

Debugging edits to figure out problem with C code.

*****

Bringing (renamed) _asymmetry.c back.

*****

Bringing _expramp.c back.

*****

Bringing _linramp.c back.

*****

Bringing _eclipse.c back.

*****

Bringing _mandeltr.c back.
This one shoulf break because there no preceeding underscore
in PyModuleDef of the file.

*****

Bringing _bilinint.c back.
Previous commit did not break...

*****

Bringing _disk.c back.

*****

Bringing _aphot.c back.

*****

Bringing _gauss.c back. The final one, will it break...

*****

Attempt number one at approaching a passing gauss test.
Replaced gauss2D code with exponential ramp.
Work in progress.

*****

One step closed, get names of functions as they should be.

*****

Getting closer.

*****

OK, it's either the name of PyMethodDef gauss_methods
or something inside the gauss2D function.

*****

It seems that the problem is the content of the function.
Reverting edits.

*****

Not breaking once again.
Try changing stuff in the PyArg_ParseTuple().

*****

So far so good. Updated the rest of the PyArg_ParseTuple variables.

*****

Broken again. Reverted PyArg_ParseTuple edits.
Updated for loops.

*****

Updated everything except the PyArg_ParseTuple.

*****

Removed height calculation.

*****

Added y_sigma and x_sigma into the PyArg_ParseTuple.

*****

Added height and backgroun into optional PyArg_ParseTuple.

*****

Try now changing the input arguments, receive array, edit in place.

*****

What if, packing the inputs in an array.


*****  Tue Mar 15 23:55:10 CET 2022  *****

There is absolutely no reason why this keeps failing.
I'm giving up. Wrote code in the python module.
Removed src_c/_gauss.c entirely.

*****

Fixed bug with relative import.

*****

Updated puppies version to 0.2.0a2.

*****

Changed license to GNU GPL v2.


*****  Fri Mar 18 21:35:35 CET 2022  *****

Housekeeping.
pup_spitzer.py is running clean.
